--- a/index.html
+++ b/index.html
@@ -526,11 +526,11 @@
             <div class="games-grid">
                 <!-- Game 7 -->
                 <div class="game-card" data-game="stickman-hook">
-                    <img src="https://ug17.github.io/images/stickman-hook.jpg" alt="Stickman Hook Game" class="game-image">
+                    <img src="https://play-lh.googleusercontent.com/tgsYU2t6YpxyClrJ2sZOi_iA12zupCgiYPhZ7m5j2DXOYZZAYG-ZkLr5uwMktz1uyBU" alt="Stickman Ghost Online" class="game-image">
                     <div class="game-info">
-                        <h3 class="game-title">Stickman Hook</h3>
-                        <p class="game-description">Swing your stickman through challenging levels using your grappling hook.</p>
-                        <a href="/play/stickman-hook" class="play-btn">Play Now</a>
+                        <h3 class="game-title">Stickman Ghost Online</h3>
+                        <p class="game-description">Play Stickman Ghost Online for free, an excellent exclusive game full of action</p>
+                        <a href="https://tikmob.github.io/game/game6.html" class="play-btn">Play Now</a>
                     </div>
                 </div>
 
