--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             <div class="games-grid">
                 <!-- Game 7 -->
                 <div class="game-card" data-game="stickman-hook">
-                    <img src="https://play-lh.googleusercontent.com/tgsYU2t6YpxyClrJ2sZOi_iA12zupCgiYPhZ7m5j2DXOYZZAYG-ZkLr5uwMktz1uyBU" alt="Stickman Ghost Online" class="game-image">
+                    <img src="https://img.gamemonetize.com/qsd2h427rg6z6gza2xekqsdwgk1dwksa/512x384.jpg" alt="Stickman Ghost Online" class="game-image">
                     <div class="game-info">
                         <h3 class="game-title">Stickman Ghost Online</h3>
                         <p class="game-description">Play Stickman Ghost Online for free, an excellent exclusive game full of action</p>
