--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             <h2 class="section-title">More Exciting Games</h2>
             <div class="games-grid">
                 <!-- Game 7 -->
-                <div class="game-card" data-game="Stickman Ghost Online">
+                <div class="game-card" data-category="Action" data-game="Stickman Ghost Online">
                     <img src="https://img.gamemonetize.com/qsd2h427rg6z6gza2xekqsdwgk1dwksa/512x384.jpg" alt="Stickman Ghost Online" class="game-image">
                     <div class="game-info">
                         <h3 class="game-title">Stickman Ghost Online</h3>
@@ -771,5 +771,39 @@
     });
   });
 </script>
+    <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const categories = document.querySelectorAll(".category");
+    const gameCards = document.querySelectorAll(".game-card");
+
+    // عند الضغط على فئة
+    categories.forEach(cat => {
+      cat.addEventListener("click", () => {
+        // إزالة حالة التفعيل عن جميع الأزرار
+        categories.forEach(c => c.classList.remove("active"));
+        // تفعيل الزر الحالي
+        cat.classList.add("active");
+
+        // جلب اسم الفئة التي تم اختيارها
+        const selectedCategory = cat.textContent.trim();
+
+        // إظهار أو إخفاء الألعاب حسب الفئة
+        gameCards.forEach(card => {
+          const cardCategory = card.getAttribute("data-category");
+
+          // زر All Games يُظهر الجميع
+          if (selectedCategory === "All Games" || !cardCategory) {
+            card.style.display = "block";
+          } else if (cardCategory && cardCategory.toLowerCase() === selectedCategory.toLowerCase()) {
+            card.style.display = "block";
+          } else {
+            card.style.display = "none";
+          }
+        });
+      });
+    });
+  });
+</script>
+
 </body>
 </html>
