--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             <h2 class="section-title">More Exciting Games</h2>
             <div class="games-grid">
                 <!-- Game 7 -->
-                <div class="game-card" data-category="Action" data-game="Stickman Ghost Online">
+               <div class="game-card" data-game="Stickman Ghost Online" data-category="Action">
                     <img src="https://img.gamemonetize.com/qsd2h427rg6z6gza2xekqsdwgk1dwksa/512x384.jpg" alt="Stickman Ghost Online" class="game-image">
                     <div class="game-info">
                         <h3 class="game-title">Stickman Ghost Online</h3>
