--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 
         <!-- More Games -->
         <section>
-            <h2 class="section-title">More Exciting Games</h2>
+            <h2 class="section-title">Games</h2>
             <div class="games-grid" id="moreGamesGrid">
                 <!-- Game 7 -->
                 <div class="game-card" data-game="Stickman Ghost Online" data-category="action adventure">
