--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     <div class="game-info">
                         <h3 class="game-title">Stickman Ghost Online</h3>
                         <p class="game-description">Play Stickman Ghost Online for free, an excellent exclusive game full of action</p>
-                        <a href="https://tikmob.github.io/game/game6.html" class="play-btn">Play Now</a>
+                        <a href="https://tikmob.github.io/game/1.jpg" class="play-btn">Play Now</a>
                     </div>
                 </div>
 
