--- a/index.html
+++ b/index.html
@@ -526,11 +526,11 @@
             <div class="games-grid" id="moreGamesGrid">
                 <!-- Game 7 -->
                 <div class="game-card" data-game="Stickman Ghost Online" data-category="action adventure">
-                    <img src="https://img.gamemonetize.com/qsd2h427rg6z6gza2xekqsdwgk1dwksa/512x384.jpg" alt="Stickman Ghost Online" class="game-image">
+                    <img src="https://tikmob.github.io/game/1.jpg" alt="Stickman Ghost Online" class="game-image">
                     <div class="game-info">
                         <h3 class="game-title">Stickman Ghost Online</h3>
                         <p class="game-description">Play Stickman Ghost Online for free, an excellent exclusive game full of action</p>
-                        <a href="https://tikmob.github.io/game/1.jpg" class="play-btn">Play Now</a>
+                        <a href="https://tikmob.github.io/game/game6.html" class="play-btn">Play Now</a>
                     </div>
                 </div>
 
