--- a/index.html
+++ b/index.html
@@ -526,21 +526,21 @@
             <div class="games-grid" id="moreGamesGrid">
                 <!-- Game 7 -->
                 <div class="game-card" data-game="Stickman Ghost Online" data-category="action adventure">
-                    <img src="https://tikmob.github.io/game/1.jpg" alt="Stickman Ghost Online" class="game-image">
+                    <img src="https://tikmob.github.io/game/images/1.jpg" alt="Stickman Ghost Online" class="game-image">
                     <div class="game-info">
                         <h3 class="game-title">Stickman Ghost Online</h3>
-                        <p class="game-description">Play Stickman Ghost Online for free, an excellent exclusive game full of action</p>
+                        <p class="game-description">Welcome to game Among Us Online Edition - game based on Among Us</p>
                         <a href="https://tikmob.github.io/game/game6.html" class="play-btn">Play Now</a>
                     </div>
                 </div>
 
                 <!-- Game 8 -->
-                <div class="game-card" data-game="flappy-bird" data-category="arcade">
-                    <img src="https://ug17.github.io/images/flappy-bird.jpg" alt="Flappy Bird Game" class="game-image">
+                <div class="game-card" data-game="Among-Us-Online" data-category="action arcade">
+                    <img src="https://tikmob.github.io/game/images/2.jpg" alt="Among Us Online" class="game-image">
                     <div class="game-info">
-                        <h3 class="game-title">Flappy Bird</h3>
-                        <p class="game-description">Navigate a bird through pipes in this challenging and addictive game.</p>
-                        <a href="/play/flappy-bird" class="play-btn">Play Now</a>
+                        <h3 class="game-title">Among Us Online</h3>
+                        <p class="game-description">Welcome to game Among Us Online Edition - game based on Among Us</p>
+                        <a href="https://tikmob.github.io/game/game8.html" class="play-btn">Play Now</a>
                     </div>
                 </div>
 
