--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
                 <nav class="nav-menu" id="navMenu">
                     <ul>
-                        <li><a href="/" class="active">Home</a></li>
+                        <li><a href="https://tikmob.github.io/game/" class="active">Home</a></li>
                         <li><a href="/games.html">All Games</a></li>
                         <li><a href="/categories.html">Categories</a></li>
                         <li><a href="/trending.html">Trending</a></li>
