--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                 <nav class="nav-menu" id="navMenu">
                     <ul>
                         <li><a href="https://tikmob.github.io/game/" class="active">Home</a></li>
-                        <li><a href="/games.html">All Games</a></li>
+                        <li><a href="/game">All Games</a></li>
                         <li><a href="/categories.html">Categories</a></li>
                         <li><a href="/trending.html">Trending</a></li>
                         <li><a href="/about.html">About</a></li>
