--- a/game11.html
+++ b/game11.html
@@ -325,7 +325,7 @@
   display: none;
   box-sizing: border-box;
 ">
-  <div style="display: flex; justify-content: space-between; align-items: center;">
+  <div style="display: flex; justify-content: space-between; align-items: center; flex-direction: row-reverse;">
     <span>إعلان</span>
     <button onclick="document.getElementById('ad-banner').style.display='none'" style="
       background: #ff4444;
