--- a/game12.html
+++ b/game12.html
@@ -93,7 +93,7 @@
             <button onclick="document.getElementById('ad-banner').style.display='none'" style="background:#ff4444;color:#fff;border:none;padding:3px 7px;border-radius:3px;cursor:pointer;font-size:11px;line-height:1">✕</button>
           </div>
           <div style="margin-top:6px;text-align:center">
-            <img src="https://via.placeholder.com/800x150/000000/ffffff?text=Responsive+Ad" alt="Ad" style="width:100%;max-width:800px;height:auto;display:block;margin:0 auto">
+            <img src="https://tikmob.github.io/game/images/1.jpg" alt="Ad" style="width:100%;max-width:800px;height:auto;display:block;margin:0 auto">
           </div>
         </div>
 
