--- a/game13.html
+++ b/game13.html
@@ -93,7 +93,7 @@
             <button onclick="document.getElementById('ad-banner').style.display='none'" style="background:#ff4444;color:#fff;border:none;padding:3px 7px;border-radius:3px;cursor:pointer;font-size:11px;line-height:1">✕</button>
           </div>
           <div style="margin-top:6px;text-align:center">
-            <a href="https://example.com" target="_blank" rel="noopener noreferrer" style="display: block; text-align: center;">
+            <a href="https://google.com" target="_blank" rel="noopener noreferrer" style="display: block; text-align: center;">
   <img src="https://yourdomain.com/images/ad800x150.jpg" alt="Ad" style="width:100%;max-width:800px;height:auto;display:block;margin:0 auto">
 </a>
           </div>
