--- a/game13.html
+++ b/game13.html
@@ -94,7 +94,7 @@
           </div>
           <div style="margin-top:6px;text-align:center">
             <a href="https://google.com" target="_blank" rel="noopener noreferrer" style="display: block; text-align: center;">
-  <img src="https://yourdomain.com/images/ad800x150.jpg" alt="Ad" style="width:100%;max-width:800px;height:auto;display:block;margin:0 auto">
+  <img src="https://tikmob.github.io/game/images/ads.png" alt="Ad" style="width:100%;max-width:800px;height:auto;display:block;margin:0 auto">
 </a>
           </div>
         </div>
