--- a/games.html
+++ b/games.html
@@ -106,7 +106,7 @@
         </div>
 
         <!-- اللعبة -->
-        <iframe id="game-iframe" src="https://html5.gamemonetize.co/qsd2h427rg6z6gza2xekqsdwgk1dwksa/" allow="autoplay;fullscreen" scrolling="no" title="Free HTML5 Game - FreePlayHub"></iframe>
+        <iframe id="game-iframe" src="" allow="autoplay;fullscreen" scrolling="no" title="Free HTML5 Game - FreePlayHub"></iframe>
         <button id="zoom-btn" class="zoom-btn" aria-label="Toggle fullscreen">⤢</button>
       </div>
 
