--- a/games.html
+++ b/games.html
@@ -106,9 +106,18 @@
         </div>
 
         <!-- اللعبة -->
-        <iframe id="game-iframe" src="" allow="autoplay;fullscreen" scrolling="no" title="Free HTML5 Game - FreePlayHub"></iframe>
-        <button id="zoom-btn" class="zoom-btn" aria-label="Toggle fullscreen">⤢</button>
-      </div>
+        <!-- اللعبة -->
+<iframe 
+  id="game-iframe" 
+  src="" 
+  allow="autoplay;fullscreen" 
+  scrolling="no" 
+  title="Free HTML5 Game - FreePlayHub">
+</iframe>
+
+<button id="zoom-btn" class="zoom-btn" aria-label="Toggle fullscreen">⤢</button>
+</div>
+
 
       <div class="game-info">
         <h2 class="game-title">Loading...</h2>
