--- a/games.html
+++ b/games.html
@@ -299,7 +299,7 @@ async function loadGame() {
   document.querySelector('.game-description').textContent = game.description;
 
   // تحديث iframe
-  const iframe = document.getElementById('game-frame');
+  const iframe = document.getElementById('game-iframe');
   iframe.src = game.iframe;
 
   // تحديث meta tags
