--- a/game.html
+++ b/game.html
@@ -260,6 +260,7 @@
     })();
 
     window.scrollTo(0,0);
+    </script>
 <script>
 document.addEventListener("DOMContentLoaded", async function () {
   const params = new URLSearchParams(window.location.search);
