--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                     <div class="game-info">
                         <h3 class="game-title">Stickman Ghost Online</h3>
                         <p class="game-description">Welcome to game Among Us Online Edition - game based on Among Us</p>
-                        <a href="https://tikmob.github.io/game/game6.html" class="play-btn">Play Now</a>
+                        <a href="https://tikmob.github.io/game/game.html?game=stickman-ghost-online-game" class="play-btn">Play Now</a>
                     </div>
                 </div>
 
