--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                     <img src="https://tikmob.github.io/game/images/1.jpg" alt="Stickman Ghost Online" class="game-image">
                     <div class="game-info">
                         <h3 class="game-title">Stickman Ghost Online</h3>
-                        <p class="game-description">Welcome to game Among Us Online Edition - game based on Among Us</p>
+                        <p class="game-description">Play Stickman Ghost Online for free and dive into an epic stickman action adventure! Take control of a brave stickman warrior</p>
                         <a href="https://tikmob.github.io/game/game.html?game=stickman-ghost-online-game" class="play-btn">Play Now</a>
                     </div>
                 </div>
@@ -545,12 +545,12 @@
                 </div>
 
                 <!-- Game 9 -->
-                <div class="game-card" data-game="basketball-stars" data-category="sports">
-                    <img src="https://ug17.github.io/images/basketball-stars.jpg" alt="Basketball Stars Game" class="game-image">
+                <div class="game-card" data-game="Super Mario Run" data-category="Adventure">
+                    <img src="https://tikmob.github.io/game/images/4.jpg" alt="Super Mario Run" class="game-image">
                     <div class="game-info">
-                        <h3 class="game-title">Basketball Stars</h3>
-                        <p class="game-description">Show off your basketball skills in one-on-one matches against players worldwide.</p>
-                        <a href="/play/basketball-stars" class="play-btn">Play Now</a>
+                        <h3 class="game-title">Super Mario Run</h3>
+                        <p class="game-description">Join Mario and his friends in this free running and adventure game!</p>
+                        <a href="https://tikmob.github.io/game/game.html?game=super-mario-run-game" class="play-btn">Play Now</a>
                     </div>
                 </div>
 
