--- a/index.html
+++ b/index.html
@@ -545,32 +545,32 @@
                 </div>
 
                 <!-- Game 9 -->
-                <div class="game-card" data-game="Super Mario Run" data-category="Adventure">
-                    <img src="https://tikmob.github.io/game/images/4.jpg" alt="Super Mario Run" class="game-image">
+                <div class="game-card" data-game="Prado Car Parking Game" data-category="Adventure Racing">
+                    <img src="https://tikmob.github.io/game/images/4.jpg" alt="Prado Car Parking Game" class="game-image">
                     <div class="game-info">
-                        <h3 class="game-title">Super Mario Run</h3>
-                        <p class="game-description">Join Mario and his friends in this free running and adventure game!</p>
-                        <a href="https://tikmob.github.io/game/game.html?game=super-mario-run-game" class="play-btn">Play Now</a>
+                        <h3 class="game-title">Prado Car Parking Game</h3>
+                        <p class="game-description">Experience the next level of luxury driving with Prado Car Parking Simulator. Step into a world where precision meets performance</p>
+                        <a href="https://tikmob.github.io/game/game.html?game=prado-car-parking-game" class="play-btn">Play Now</a>
                     </div>
                 </div>
 
                 <!-- Game 10 -->
-                <div class="game-card" data-game="paper-io" data-category="strategy arcade">
-                    <img src="https://ug17.github.io/images/paper-io.jpg" alt="Paper.io Game" class="game-image">
+                <div class="game-card" data-game="Sniper Simulator" data-category="puzzle">
+                    <img src="https://tikmob.github.io/game/images/3.jpg" alt="Sniper Simulator" class="game-image">
                     <div class="game-info">
-                        <h3 class="game-title">Paper.io</h3>
-                        <p class="game-description">Capture territory and defeat opponents in this competitive .io game.</p>
-                        <a href="/play/paper-io" class="play-btn">Play Now</a>
+                        <h3 class="game-title">Sniper Simulator</h3>
+                        <p class="game-description">Step into the world of precision shooting with Sniper Simulator</p>
+                        <a href="https://tikmob.github.io/game/game.html?game=sniper-simulator-game" class="play-btn">Play Now</a>
                     </div>
                 </div>
 
                 <!-- Game 11 -->
-                <div class="game-card" data-game="hextris" data-category="puzzle">
-                    <img src="https://ug17.github.io/images/hextris.jpg" alt="Hextris Game" class="game-image">
+                <div class="game-card" data-game="paper-io" data-category="Adventure Racing">
+                    <img src="https://tikmob.github.io/game/images/2.jpg" alt="Paper.io Game" class="game-image">
                     <div class="game-info">
-                        <h3 class="game-title">Hextris</h3>
-                        <p class="game-description">A hexagon-based twist on the classic Tetris puzzle game.</p>
-                        <a href="/play/hextris" class="play-btn">Play Now</a>
+                        <h3 class="game-title">Paper.io</h3>
+                        <p class="game-description">Capture territory and defeat opponents in this competitive .io game.</p>
+                        <a href="/play/paper-io" class="play-btn">Play Now</a>
                     </div>
                 </div>
 
